# Video-Player

./: .gitignore  Doxyfile  How predictor comprime.txt  Lossy Predictor results.txt  New Predictor results.txt  Predictor results.txt  Project Final Results.txt  inter frames.txt
Documentation/html/: _bit_stream_8cpp.html  _bit_stream_8h.html  _bit_stream_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _golomb_8cpp.html  _golomb_8h.html  _golomb_8h_source.html  _lossy_predictor_8cpp.html  _lossy_predictor_8h.html  _lossy_predictor_8h_source.html  _predictor_8cpp.html  _predictor_8h.html  _predictor_8h_source.html  _target_directories_8txt.html  _testing_8dir_2link_8txt.html  _video_01_player_8cpp.html  _video_player_8dir_2link_8txt.html  annotated.html  annotated_dup.js  class_bit_stream-members.html  class_bit_stream.html  class_bit_stream.js  class_golomb-members.html  class_golomb.html  class_lossy_predictor-members.html  class_lossy_predictor.html  class_predictor-members.html  class_predictor.html  classes.html  classjpeg_predictor-members.html  classjpeg_predictor.html  clion-environment_8txt.html  clion-log_8txt.html  dir_0103ed963d64ba4266c105abebf3d153.html  dir_036c219214bf029f9587c0cb6ed36e34.html  dir_077927b6343d66d663d94c83a68ef825.html  (+43 more)
Video Player/: Video Player.sln
VideoPlayer/: BitStream.cpp  CMakeLists.txt  Golomb.cpp  Golomb.h  LossyPredictor.cpp  LossyPredictor.h  Predictor.cpp  Predictor.h  Video Player.cpp  jpegPredictor.cpp  jpegPredictor.h  main.cpp
(+110 files in other folders)
